buildscript {
    ext {
        springBootVersion = '2.0.5.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.ttn.elasticsearchAPI'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}


dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.codehaus.groovy:groovy-all')
    compileOnly('org.springframework.boot:spring-boot-configuration-processor')
    compileOnly('org.projectlombok:lombok')
    annotationProcessor('org.projectlombok:lombok')
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    testImplementation('org.springframework.boot:spring-boot-starter-test')
    implementation('org.codehaus.groovy.modules.http-builder:http-builder:0.7.1')
    implementation('org.elasticsearch.client:elasticsearch-rest-client:6.3.2')
    implementation('org.apache.httpcomponents:httpasyncclient')
    implementation('org.apache.httpcomponents:httpcore-nio')
    implementation('org.apache.httpcomponents:httpclient')
    implementation('org.apache.httpcomponents:httpcore')
    implementation('commons-codec:commons-codec')
    implementation('commons-logging:commons-logging')
}
